--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,4 @@ services:
     ports:
       - 8888:8888
     volumes: 
-      - "~/machine-learning/notebooks:/home/jovyan/notebooks"
+      - "/home/david/machine-learning/notebooks:/home/jovyan/work"
